test_bluesuit_console/blue_dir/include/TestEngine.h


TESTENGINE_API(int32) teGetVersion(char* versionStr);
TESTENGINE_API(uint32) openTestEngine(int32 transport, 
                                        char const * const transportDevice, 
                                        uint32 dataRate, int32 retryTimeOut, 
                                        int32 usbTimeOut);
TESTENGINE_API(uint32) openTestEngineSpi(int32 port, int32 multi, int32 transport);
TESTENGINE_API(uint32) openTestEngineSpiUnlock(int32 port, int32 multi,
                                               int32 transport,
                                               const char* unlockKey);
TESTENGINE_API(uint32) openTestEngineSpiTrans(char const * const trans, int32 multi);
TESTENGINE_API(uint32) openTestEngineSpiUnlockTrans(char const * const trans,
                                                    int32 multi,
                                                    const char* unlockKey);
TESTENGINE_API(int32) closeTestEngine(uint32 handle);
TESTENGINE_API(uint32) teGetLastError(uint32 handle);
TESTENGINE_API(int32) bccmdSetColdReset(uint32 handle, int32 usbTimeout);
TESTENGINE_API(int32) bccmdSetWarmReset(uint32 handle, int32 usbTimeout);
TESTENGINE_API(int32) radiotestPause(uint32 handle);
TESTENGINE_API(int32) radiotestDeepSleep(uint32 handle);
TESTENGINE_API(int32) radiotestPcmExtLb(uint32 handle, uint16 pcm_mode);
TESTENGINE_API(int32) radiotestPcmExtLbIf(uint32 handle, uint16 pcm_mode, 
                                           uint16 pcm_if);
TESTENGINE_API(int32) radiotestPcmLb(uint32 handle, uint16 pcm_mode);
TESTENGINE_API(int32) radiotestPcmLbIf(uint32 handle, uint16 pcm_mode, uint16 pcm_if);
TESTENGINE_API(int32) radiotestPcmTimingIn(uint32 handle, uint16 pio_out, 
                                            uint16 pcm_in);
TESTENGINE_API(int32) radiotestPcmTimingInIf(uint32 handle, uint16 pio_out, 
                                              uint16 pcm_in, uint16 pcm_if);
TESTENGINE_API(int32) radiotestPcmTone(uint32 handle, uint16 freq, uint16 ampl, 
                                        uint16 dc);
TESTENGINE_API(int32) radiotestPcmToneIf(uint32 handle, uint16 freq, uint16 ampl, 
                                            uint16 dc, uint16 pcm_if);
TESTENGINE_API(int32) radiotestPcmToneStereo(uint32 handle, uint16 freq, uint16 ampl, 
                                        uint16 dc, uint16 channel);
TESTENGINE_API(int32) radiotestCtsRtsLb(uint32 handle);
TESTENGINE_API(int32) radiotestRadioStatus(uint32 handle);
TESTENGINE_API(int32) hqGetRadioStatus(uint32 handle, uint16 r[], int32 timeout);
TESTENGINE_API(int32) radiotestRadioStatusArray(uint32 handle);
TESTENGINE_API(int32) hqGetRadioStatusArray(uint32 handle, uint16 r[], int32 timeout);
TESTENGINE_API(int32) bccmdMemoryGet(uint32 handle, uint16 baseAddr, uint16 dataLength, 
                                    uint16 data[]);
TESTENGINE_API(int32) bccmdMemorySet(uint32 handle, uint16 baseAddr, uint16 dataLength, 
                                    uint16 const data[]);
TESTENGINE_API(int32) bccmdGetBuildId(uint32 handle, uint16 * buildid);
TESTENGINE_API(int32) bccmdBuildName(uint32 handle, char* name, uint16 max_len, 
                                    uint16 * length);
TESTENGINE_API(int32) bccmdGetChipVersion(uint32 handle, uint16 * chipver);
TESTENGINE_API(int32) bccmdGetChipRevision(uint32 handle, uint16 * chiprev);
TESTENGINE_API(int32) bccmdGetChipAnaVer(uint32 handle, uint8 * major, uint8 * minor, 
                                            uint8 * vari);
TESTENGINE_API(int32) bccmdRouteClock(uint32 handle);
TESTENGINE_API(int32) bccmdRssiAcl(uint32 handle, uint16 connectionHandle, 
                                    int16 * rssi);
TESTENGINE_API(int32) bccmdSetPio(uint32 handle, uint16 mask, uint16 port);
TESTENGINE_API(int32) bccmdGetPio(uint32 handle, uint16 * mask, uint16 * port);
TESTENGINE_API(int32) bccmdMapPio32(uint32 handle, uint32 mask, uint32 pios, 
                                     uint32* errLines);
TESTENGINE_API(int32) bccmdSetPio32(uint32 handle, uint32 mask, uint32 direction, 
                                     uint32 value, uint32* errLines);
TESTENGINE_API(int32) bccmdGetPio32(uint32 handle, uint32* direction, uint32* value);
TESTENGINE_API(int32) bccmdGetAdc(uint32 handle, uint16 adc, uint16* result);
TESTENGINE_API(int32) bccmdGetAio(uint32 handle, uint16 aio, uint16 * result, 
                                    uint8 * numBits);
TESTENGINE_API(int32) bccmdBC5MMGetBatteryVoltage(uint32 handle, uint16 * voltage);
TESTENGINE_API(int32) bccmdGetFirmwareCheckMask(uint32 handle, uint16 * mask);
TESTENGINE_API(int32) bccmdGetFirmwareCheck(uint32 handle, uint16 * check);
TESTENGINE_API(int32) bccmdGetExternalClockPeriod(uint32 handle, uint16 * period);
TESTENGINE_API(int32) bccmdEnableDeviceConnect(uint32 handle);
TESTENGINE_API(int32) bccmdEnableDeviceUnderTestMode(uint32 handle);
TESTENGINE_API(int32) radiotestStereoCodecLB(uint32 handle, uint16 sampleRate, 
                                            uint16 reroute);
TESTENGINE_API(int32) radiotestTxstart(uint32 handle, uint16 frequency, uint16 intPA, 
                                        uint16 extPA, int16 modulation);
TESTENGINE_API(int32) radiotestTxdata1(uint32 handle, uint16 frequency, uint16 intPA, 
                                        uint16 extPA);
TESTENGINE_API(int32) radiotestTxdata2(uint32 handle, uint16 countrycode, uint16 intPA, 
                                        uint16 extPA);
TESTENGINE_API(int32) radiotestTxdata3(uint32 handle, uint16 frequency, uint16 intPA, 
                                        uint16 extPA);
TESTENGINE_API(int32) radiotestTxdata4(uint32 handle, uint16 frequency, uint16 intPA, 
                                        uint16 extPA);
TESTENGINE_API(int32) radiotestCfgTxPower(uint32 handle, int16 power);
TESTENGINE_API(int32) radiotestRxstart1(uint32 handle, uint16 frequency, uint8 hiside, 
                                        uint16 rx_attenuation);
TESTENGINE_API(int32) radiotestRxstart2(uint32 handle, uint16 frequency, uint8 hiside, 
                                        uint16 rx_attenuation, uint16 sample_size);
TESTENGINE_API(int32) hqGetRssi(uint32 handle, int32 timeout, uint16 max_size, 
                                uint16 r[]);
TESTENGINE_API(int32) radiotestBer1(uint32 handle, uint16 frequency, uint8 hiside, 
                                    uint16 rx_attenuation, uint32 sampleSize);
TESTENGINE_API(int32) radiotestBer2(uint32 handle, uint16 country_code, uint8 hiside, 
                                    uint16 rx_attenuation, uint32 sampleSize);
TESTENGINE_API(int32) radiotestBerLoopback(uint32 handle, uint16 frequency, 
                                            uint16 intPA, uint16 extPA, 
                                            uint32 sampleSize);
TESTENGINE_API(int32) radiotestRxLoopback(uint32 handle, uint16 frequency, 
                                        uint16 intPA, uint16 extPA);
TESTENGINE_API(int32) radiotestLoopback(uint32 handle, uint16 frequency, uint16 intPA, 
                                        uint16 extPA);
TESTENGINE_API(int32) hqGetBer(uint32 handle, int32 timeout, uint32 r[]);
TESTENGINE_API(int32) radiotestRxdata1(uint32 handle, uint16 frequency, uint8 hiside, 
                                        uint16 rx_attenuation);
TESTENGINE_API(int32) radiotestRxdata2(uint32 handle, uint16 countrycode, 
                                        uint8 hiside, uint16 rx_attenuation);
TESTENGINE_API(int32) hqGetRxdata(uint32 handle, int32 timeout, uint16 r[]);
TESTENGINE_API(int32) radiotestCfgFreq(uint32 handle, uint16 txrxinterval, 
                                        uint16 loopback, uint16 report);
TESTENGINE_API(int32) radiotestCfgFreqMs(uint32 handle, uint16 txrxinterval, 
                                            uint16 loopback, uint16 report);
TESTENGINE_API(int32) radiotestCfgPkt(uint32 handle, uint16 type, uint16 size);
TESTENGINE_API(int32) radiotestCfgBitError(uint32 handle, uint32 sampleSize, 
                                            uint8 reset);
TESTENGINE_API(int32) radiotestCfgTxPaAtten(uint32 handle, uint16 atten);
TESTENGINE_API(int32) radiotestCfgXtalFtrim(uint32 handle, uint16 ftrim);
TESTENGINE_API(int32) radiotestCalcXtalOffset(float64 nominalFreqMhz, 
                                              float64 actualFreqMhz, int16 * offset);
TESTENGINE_API(int32) radiotestCfgUapLap(uint32 handle, uint16 uap, uint32 lap);
TESTENGINE_API(int32) radiotestCfgIqTrim(uint32 handle, uint16 trim);
TESTENGINE_API(int32) radiotestCfgTxIf(uint32 handle, int16 offset);
TESTENGINE_API(int32) radiotestCfgTxTrim(uint32 handle, uint16 am_addr);
TESTENGINE_API(int32) radiotestCfgLoLvl(uint32 handle, uint16 lo_lvl);
TESTENGINE_API(int32) radiotestCfgHoppingSeq(uint32 handle, uint16 channels[]);
TESTENGINE_API(int32) radiotestSettle(uint32 handle, uint16 start, uint16 end);
TESTENGINE_API(int32) hqGetSettle(uint32 handle, uint16 r[]);
TESTENGINE_API(int32) get_freq_offset(uint32 handle, float64 * offset, 
                                        int32 sample_size);
TESTENGINE_API(int32) bccmdSetEeprom(uint32 handle, uint16 log2bytes, uint16 addrMask);
TESTENGINE_API(int32) psReadBdAddr(uint32 handle, uint32 * lap, uint8 * uap, 
                                    uint16 * nap);
TESTENGINE_API(int32) psRead(uint32 handle, uint16 psKey, uint16 store, 
                                uint16 arrayLen, uint16 data[], uint16 * len);
TESTENGINE_API(int32) psClear(uint32 handle, uint16 psKey, uint16 store);