BlueToolTestforJoy/blue_dir/include/VB6/TestEngineAPI.bas


Declare Function teGetVersion Lib "TestEngine.dll" (ByVal versionStr As String) As Long
Declare Function openTestEngine Lib "TestEngine.dll" (ByVal transport As Long, ByVal transportDevice As String, ByVal dataRate As Long, ByVal retryTimeOut As Long, ByVal usbTimeOut As Long) As Long
Declare Function openTestEngineSpi Lib "TestEngine.dll" (ByVal port As Long, ByVal multi As Long, ByVal transport As Long) As Long
Declare Function openTestEngineSpiUnlock Lib "TestEngine.dll" (ByVal port As Long, ByVal multi As Long, ByVal transport As Long, ByVal unlockKey As String) As Long
Declare Function openTestEngineSpiTrans Lib "TestEngine.dll" (ByVal trans As String, ByVal multi As Long) As Long
Declare Function openTestEngineSpiUnlockTrans Lib "TestEngine.dll" (ByVal trans As String, ByVal multi As Long, ByVal unlockKey As String) As Long
Declare Function closeTestEngine Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function teGetLastError Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function bccmdSetColdReset Lib "TestEngine.dll" (ByVal handle As Long, ByVal usbTimeout As Long) As Long
Declare Function bccmdSetWarmReset Lib "TestEngine.dll" (ByVal handle As Long, ByVal usbTimeout As Long) As Long
Declare Function radiotestPause Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function radiotestDeepSleep Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function radiotestPcmExtLb Lib "TestEngine.dll" (ByVal handle As Long, ByVal pcm_mode As Integer) As Long
Declare Function radiotestPcmExtLbIf Lib "TestEngine.dll" (ByVal handle As Long, ByVal pcm_mode As Integer, ByVal pcm_if As Integer) As Long
Declare Function radiotestPcmLb Lib "TestEngine.dll" (ByVal handle As Long, ByVal pcm_mode As Integer) As Long
Declare Function radiotestPcmLbIf Lib "TestEngine.dll" (ByVal handle As Long, ByVal pcm_mode As Integer, ByVal pcm_if As Integer) As Long
Declare Function radiotestPcmTimingIn Lib "TestEngine.dll" (ByVal handle As Long, ByVal pio_out As Integer, ByVal pcm_in As Integer) As Long
Declare Function radiotestPcmTimingInIf Lib "TestEngine.dll" (ByVal handle As Long, ByVal pio_out As Integer, ByVal pcm_in As Integer, ByVal pcm_if As Integer) As Long
Declare Function radiotestPcmTone Lib "TestEngine.dll" (ByVal handle As Long, ByVal freq As Integer, ByVal ampl As Integer, ByVal dc As Integer) As Long
Declare Function radiotestPcmToneIf Lib "TestEngine.dll" (ByVal handle As Long, ByVal freq As Integer, ByVal ampl As Integer, ByVal dc As Integer, ByVal pcm_if As Integer) As Long
Declare Function radiotestPcmToneStereo Lib "TestEngine.dll" (ByVal handle As Long, ByVal freq As Integer, ByVal ampl As Integer, ByVal dc As Integer, ByVal channel As Integer) As Long
Declare Function radiotestCtsRtsLb Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function radiotestRadioStatus Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function hqGetRadioStatus Lib "TestEngine.dll" (ByVal handle As Long, ByVal r As Integer, ByVal timeout As Long) As Long
Declare Function radiotestRadioStatusArray Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function hqGetRadioStatusArray Lib "TestEngine.dll" (ByVal handle As Long, ByVal r As Integer, ByVal timeout As Long) As Long
Declare Function bccmdMemoryGet Lib "TestEngine.dll" (ByVal handle As Long, ByVal baseAddr As Integer, ByVal dataLength As Integer, ByVal data As Integer) As Long
Declare Function bccmdMemorySet Lib "TestEngine.dll" (ByVal handle As Long, ByVal baseAddr As Integer, ByVal dataLength As Integer, ByVal data As Integer) As Long
Declare Function bccmdGetBuildId Lib "TestEngine.dll" (ByVal handle As Long, ByRef buildid As Integer) As Long
Declare Function bccmdBuildName Lib "TestEngine.dll" (ByVal handle As Long, ByVal name As String, ByVal max_len As Integer, ByRef length As Integer) As Long
Declare Function bccmdGetChipVersion Lib "TestEngine.dll" (ByVal handle As Long, ByRef chipver As Integer) As Long
Declare Function bccmdGetChipRevision Lib "TestEngine.dll" (ByVal handle As Long, ByRef chiprev As Integer) As Long
Declare Function bccmdGetChipAnaVer Lib "TestEngine.dll" (ByVal handle As Long, ByRef major As Byte, ByRef minor As Byte, ByRef vari As Byte) As Long
Declare Function bccmdRouteClock Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function bccmdRssiAcl Lib "TestEngine.dll" (ByVal handle As Long, ByVal connectionHandle As Integer, ByRef rssi As Integer) As Long
Declare Function bccmdSetPio Lib "TestEngine.dll" (ByVal handle As Long, ByVal mask As Integer, ByVal port As Integer) As Long
Declare Function bccmdGetPio Lib "TestEngine.dll" (ByVal handle As Long, ByRef mask As Integer, ByRef port As Integer) As Long
Declare Function bccmdMapPio32 Lib "TestEngine.dll" (ByVal handle As Long, ByVal mask As Long, ByVal pios As Long, ByRef errLines As Long) As Long
Declare Function bccmdSetPio32 Lib "TestEngine.dll" (ByVal handle As Long, ByVal mask As Long, ByVal direction As Long, ByVal value As Long, ByRef errLines As Long) As Long
Declare Function bccmdGetPio32 Lib "TestEngine.dll" (ByVal handle As Long, ByRef direction As Long, ByRef value As Long) As Long
Declare Function bccmdGetAdc Lib "TestEngine.dll" (ByVal handle As Long, ByVal adc As Integer, ByRef result As Integer) As Long
Declare Function bccmdGetAio Lib "TestEngine.dll" (ByVal handle As Long, ByVal aio As Integer, ByRef result As Integer, ByRef numBits As Byte) As Long
Declare Function bccmdBC5MMGetBatteryVoltage Lib "TestEngine.dll" (ByVal handle As Long, ByRef voltage As Integer) As Long
Declare Function bccmdGetFirmwareCheckMask Lib "TestEngine.dll" (ByVal handle As Long, ByRef mask As Integer) As Long
Declare Function bccmdGetFirmwareCheck Lib "TestEngine.dll" (ByVal handle As Long, ByRef check As Integer) As Long
Declare Function bccmdGetExternalClockPeriod Lib "TestEngine.dll" (ByVal handle As Long, ByRef period As Integer) As Long
Declare Function bccmdEnableDeviceConnect Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function bccmdEnableDeviceUnderTestMode Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function radiotestStereoCodecLB Lib "TestEngine.dll" (ByVal handle As Long, ByVal sampleRate As Integer, ByVal reroute As Integer) As Long
Declare Function radiotestTxstart Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal intPA As Integer, ByVal extPA As Integer, ByVal modulation As Integer) As Long
Declare Function radiotestTxdata1 Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal intPA As Integer, ByVal extPA As Integer) As Long
Declare Function radiotestTxdata2 Lib "TestEngine.dll" (ByVal handle As Long, ByVal countrycode As Integer, ByVal intPA As Integer, ByVal extPA As Integer) As Long
Declare Function radiotestTxdata3 Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal intPA As Integer, ByVal extPA As Integer) As Long
Declare Function radiotestTxdata4 Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal intPA As Integer, ByVal extPA As Integer) As Long
Declare Function radiotestCfgTxPower Lib "TestEngine.dll" (ByVal handle As Long, ByVal power As Integer) As Long
Declare Function radiotestRxstart1 Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal hiside As Byte, ByVal rx_attenuation As Integer) As Long
Declare Function radiotestRxstart2 Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal hiside As Byte, ByVal rx_attenuation As Integer, ByVal sample_size As Integer) As Long
Declare Function hqGetRssi Lib "TestEngine.dll" (ByVal handle As Long, ByVal timeout As Long, ByVal max_size As Integer, ByVal r As Integer) As Long
Declare Function radiotestBer1 Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal hiside As Byte, ByVal rx_attenuation As Integer, ByVal sampleSize As Long) As Long
Declare Function radiotestBer2 Lib "TestEngine.dll" (ByVal handle As Long, ByVal country_code As Integer, ByVal hiside As Byte, ByVal rx_attenuation As Integer, ByVal sampleSize As Long) As Long
Declare Function radiotestBerLoopback Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal intPA As Integer, ByVal extPA As Integer, ByVal sampleSize As Long) As Long
Declare Function radiotestRxLoopback Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal intPA As Integer, ByVal extPA As Integer) As Long
Declare Function radiotestLoopback Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal intPA As Integer, ByVal extPA As Integer) As Long
Declare Function hqGetBer Lib "TestEngine.dll" (ByVal handle As Long, ByVal timeout As Long, ByVal r As Long) As Long
Declare Function radiotestRxdata1 Lib "TestEngine.dll" (ByVal handle As Long, ByVal frequency As Integer, ByVal hiside As Byte, ByVal rx_attenuation As Integer) As Long
Declare Function radiotestRxdata2 Lib "TestEngine.dll" (ByVal handle As Long, ByVal countrycode As Integer, ByVal hiside As Byte, ByVal rx_attenuation As Integer) As Long
Declare Function hqGetRxdata Lib "TestEngine.dll" (ByVal handle As Long, ByVal timeout As Long, ByVal r As Integer) As Long
Declare Function radiotestCfgFreq Lib "TestEngine.dll" (ByVal handle As Long, ByVal txrxinterval As Integer, ByVal loopback As Integer, ByVal report As Integer) As Long
Declare Function radiotestCfgFreqMs Lib "TestEngine.dll" (ByVal handle As Long, ByVal txrxinterval As Integer, ByVal loopback As Integer, ByVal report As Integer) As Long
Declare Function radiotestCfgPkt Lib "TestEngine.dll" (ByVal handle As Long, ByVal aType As Integer, ByVal size As Integer) As Long
Declare Function radiotestCfgBitError Lib "TestEngine.dll" (ByVal handle As Long, ByVal sampleSize As Long, ByVal reset As Byte) As Long
Declare Function radiotestCfgTxPaAtten Lib "TestEngine.dll" (ByVal handle As Long, ByVal atten As Integer) As Long
Declare Function radiotestCfgXtalFtrim Lib "TestEngine.dll" (ByVal handle As Long, ByVal ftrim As Integer) As Long
Declare Function radiotestCalcXtalOffset Lib "TestEngine.dll" (ByVal nominalFreqMhz As Double, ByVal actualFreqMhz As Double, ByRef offset As Integer) As Long
Declare Function radiotestCfgUapLap Lib "TestEngine.dll" (ByVal handle As Long, ByVal uap As Integer, ByVal lap As Long) As Long
Declare Function radiotestCfgIqTrim Lib "TestEngine.dll" (ByVal handle As Long, ByVal trim As Integer) As Long
Declare Function radiotestCfgTxIf Lib "TestEngine.dll" (ByVal handle As Long, ByVal offset As Integer) As Long
Declare Function radiotestCfgTxTrim Lib "TestEngine.dll" (ByVal handle As Long, ByVal am_addr As Integer) As Long
Declare Function radiotestCfgLoLvl Lib "TestEngine.dll" (ByVal handle As Long, ByVal lo_lvl As Integer) As Long
Declare Function radiotestCfgHoppingSeq Lib "TestEngine.dll" (ByVal handle As Long, ByVal channels As Integer) As Long
Declare Function radiotestSettle Lib "TestEngine.dll" (ByVal handle As Long, ByVal start As Integer, ByVal aEnd As Integer) As Long
Declare Function hqGetSettle Lib "TestEngine.dll" (ByVal handle As Long, ByVal r As Integer) As Long
Declare Function get_freq_offset Lib "TestEngine.dll" (ByVal handle As Long, ByRef offset As Double, ByVal sample_size As Long) As Long
Declare Function bccmdSetEeprom Lib "TestEngine.dll" (ByVal handle As Long, ByVal log2bytes As Integer, ByVal addrMask As Integer) As Long
Declare Function psReadBdAddr Lib "TestEngine.dll" (ByVal handle As Long, ByRef lap As Long, ByRef uap As Byte, ByRef nap As Integer) As Long
Declare Function psRead Lib "TestEngine.dll" (ByVal handle As Long, ByVal psKey As Integer, ByVal store As Integer, ByVal arrayLen As Integer, ByVal data As Integer, ByRef aLen As Integer) As Long
Declare Function psClear Lib "TestEngine.dll" (ByVal handle As Long, ByVal psKey As Integer, ByVal store As Integer) As Long
